# upp-mcpserver

./: LICENSE  McpServerGUI.upp  README.md  mcp_server_lib.upp  upp-mcpserver.upp  upp-mcpserver.var
McpServerGUI/: Main.cpp  McpServerGUI.upp  McpServerWindow.cpp  McpServerWindow.h  McpServerWindow.layout  McpSplash.cpp  McpSplash.h
examples/data_saver/: CMakeLists.txt  data_saver.upp  data_saver_main.cpp
examples/file_manager/: CMakeLists.txt  file_manager.upp  file_manager_main.cpp
examples/file_reader/: CMakeLists.txt  file_reader.upp  file_reader_main.cpp
examples/math_calculator/: CMakeLists.txt  math_calculator.upp  math_calculator_main.cpp
examples/simple_dir_explorer/: CMakeLists.txt  simple_dir_explorer.upp  simple_dir_explorer_main.cpp
include/: McpServer.h
mcp_server_lib/: ConfigManager.cpp  ConfigManager.h  McpServer.cpp  WebSocket.h  mcp_server_lib.upp
minimalclient/: Main.cpp  MinimalWsClient.upp  WebSocket.h
minimalserver/: Main.cpp  MinimalWsServer.upp  WebSocket.h
plugins/ums-calc/: CMakeLists.txt  math_calculator_main.cpp  ums-calc.upp
plugins/ums-createdir/: CMakeLists.txt  file_manager_main.cpp  ums-createdir.upp
plugins/ums-listdir/: CMakeLists.txt  simple_dir_explorer_main.cpp  ums-listdir.upp
plugins/ums-readfile/: CMakeLists.txt  file_reader_main.cpp  ums-readfile.upp
plugins/ums-writefile/: CMakeLists.txt  data_saver_main.cpp  ums-writefile.upp
src/: ConfigManager.cpp  Main.cpp  McpServer.cpp  McpServerWindow.cpp  McpServerWindow.h  McpSplash.cpp  McpSplash.h
tests/: CMakeLists.txt  McpServerTests.upp  test_helpers.h  test_main.cpp  test_permissions.cpp  test_sandbox.cpp
ui/: McpServerWindow.layout  McpSplash.layout
