cmake_minimum_required(VERSION 3.10)
project(McpServerTests)

# This CMakeLists.txt would typically:
# 1. Find a C++ test framework (like Google Test, Catch2, or U++'s own Test:: UnitTest)
# 2. Add executables for each test file or a combined test runner.
# 3. Link against the mcp_server_lib and the test framework.

# Placeholder for U++ Test++ integration or other framework
# add_executable(SandboxTests test_sandbox.cpp)
# target_link_libraries(SandboxTests PRIVATE mcp_server_lib UPP::Core Test::UnitTest)

# add_executable(PermissionTests test_permissions.cpp)
# target_link_libraries(PermissionTests PRIVATE mcp_server_lib UPP::Core Test::UnitTest)

# Example using U++ Test::UnitTest (if available and configured)
# ASSISTANT_NOTE: U++ Test framework is Test::
# For now, just a comment indicating where test registration would go.
# If using U++'s own test framework, usually it's integrated via .upp files.
