cmake_minimum_required(VERSION 3.10)
project(DataSaverExample)

# Placeholder for U++ CMake integration
add_executable(DataSaverMain data_saver_main.cpp)

# Placeholder: Link against mcp_server_lib and U++ Core, Json, WebSockets
# target_link_libraries(DataSaverMain PRIVATE mcp_server_lib UPP::Core UPP::Json UPP::WebSockets)
