cmake_minimum_required(VERSION 3.10)
project(FileManagerExample)

# Placeholder for U++ CMake integration
add_executable(FileManagerMain file_manager_main.cpp)

# Placeholder: Link against mcp_server_lib and U++ Core, Json, WebSockets
# target_link_libraries(FileManagerMain PRIVATE mcp_server_lib UPP::Core UPP::Json UPP::WebSockets)
