cmake_minimum_required(VERSION 3.10)
project(MathCalculatorExample)

# Placeholder for U++ CMake integration
add_executable(MathCalculatorMain math_calculator_main.cpp)

# Placeholder: Link against mcp_server_lib and U++ Core, Json, WebSockets
# target_link_libraries(MathCalculatorMain PRIVATE mcp_server_lib UPP::Core UPP::Json UPP::WebSockets)
