cmake_minimum_required(VERSION 3.10)
project(SimpleDirExplorerExample)

# Placeholder for U++ CMake integration
add_executable(SimpleDirExplorerMain simple_dir_explorer_main.cpp)

# Placeholder: Link against mcp_server_lib and U++ Core, Json, WebSockets
# target_link_libraries(SimpleDirExplorerMain PRIVATE mcp_server_lib UPP::Core UPP::Json UPP::WebSockets)
